adding extra features

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,29 @@
 .summary, .header {
   margin: 1rem;
 }
+
+nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  background: #ada9e2;
+  margin: 20px 30px;
+  padding: 12px 24px;
+  border-radius: 8px;
+  display: flex;
+  gap: 18px;
+  align-items: center;
+}
+
+.charts{
+  display: flex;
+  align-items: flex-start;
+  gap: 2rem;
+}
+nav li {
+  list-style-type: none;
+}
+nav li::before {
+  content: "🌈 ";
+}
